--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="nama_penyakit">Nama Penyakit: </string>
     <string name="jumlah_penderita">Jumlah Penderita: </string>
     <string name="simpan">Simpan</string>
-    <string name="malaria_mix">Malaria Mix</string>
+    <string name="malaria_mix">Tersangka HFMD(Hand, Foot, Mouth Disease"</string>
     <string name="periode_minggu">Periode Minggu</string>
     <string name="number_minggu">1</string>
     <string name="kode">Kode</string>
