--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="recap">Recap</string>
     <string name="nomor_tujuan">Nomor Tujuan:</string>
     <string name="format_laporan">Format Laporan</string>
+    <string name="setting">Setting</string>
 
     <string-array name="desa_array">
         <item>Natar</item>
