--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string-array name="penyakit_array">
         <item>Diare Akut</item>
         <item>Malaria Konfirmasi</item>
-        <item>Tersangka Demam Dangue</item>
+        <item>Tersangka Demam Dengue</item>
         <item>Pneumonia</item>
         <item>Diare Berdarah ATAU Disentri</item>
         <item>Tersangka Demam Tifoid</item>
@@ -55,10 +55,10 @@
         <item>Tersangka Leptosipirosis</item>
         <item>Tersangka Kolera</item>
         <item>Klaster Penyakit yang tidak lazim</item>
-        <item>Tersangka Meningitis/Ensifalitis</item>
-        <item>Tersangka Tetanus Neonantorum</item>
-        <item>Tersangaka Tenanus</item>
-        <item>ILI (Infulenza Like Illness)</item>
+        <item>Tersangka Meningitis/Ensefalitis</item>
+        <item>Tersangka Tetanus Neonatorum</item>
+        <item>Tersangka Tetanus</item>
+        <item>ILI (Influenza Like Ilness)</item>
         <item>ILI (Tersangka HFMD (Hand, Foot, Mouth Disease)</item>
     </string-array>
 
